# rand

./: Main.hs  README.md  rand.cabal
misc/git/: pre-commit
