name:                rand
version:             0.1.0
synopsis:            ..
description:         ...
homepage:            https://github.com/neosimsim/rand
license:             BSD3
license-file:        LICENSE
author:              Alexander Ben Nasrallah
maintainer:          me@abn.sh
-- copyright:
category:            Misc
build-type:          Simple
extra-source-files:  CHANGELOG.md
cabal-version:       >=1.10

source-repository head
  type:              git
  location:          https://github.com/neosimsim/rand

flag develop
  description: Enable warnings and treat them as error.
  default:     False
  manual:      True

executable rand
  main-is:             Main.hs
  build-depends:       base == 4.*, random == 1.1.*
  default-language:    Haskell2010
  if flag(develop)
    ghc-options: -Wall -Werror -Wno-type-defaults
